kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100% 
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: greysd/kubernetes-intro:latest 
          name: web
          volumeMounts:
            - name: app
              mountPath: /app
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: 8000
      volumes:
        - name: app
          emptyDir: {}
