kubernetes-networks/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  labels:
    app: web
spec:
  containers:
  - name: web
    image: greysd/kubernetes-intro:latest
    readinessProbe:
      httpGet:
        path: /index.html
        port: 80
    livenessProbe:
      tcpSocket:
        port: 8000
    volumeMounts:
    - name: app
      mountPath: /app
    ports:
    - containerPort: 8000
      hostPort: 8000

  volumes:
  - name: app
    emptyDir: {}
